<resources>
    <string name="app_name">WeatherProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="time">loading time</string>
    <string name="feels_like">Ощущается как:</string>
    <string name="temp">+00</string>
    <string name="description">loading description</string>
    <string name="wind_speed">Скорость ветра:</string>
    <string name="humidity">Влажность:</string>
    <string name="pressure">Давление:</string>
    <string name="date">date loading</string>
    <string name="alertDialogMessage">Вы уверены что хотите удалить эту вкладку?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

</resources>