<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="224dp"
    android:layout_height="288dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="216dp"
        android:layout_height="280dp"
        app:cardCornerRadius="32dp"
        app:cardMaxElevation="5dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/weatherTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="24dp"
                android:text="@string/temp"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherTime" />

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/temperature"
                app:layout_constraintTop_toBottomOf="@+id/weatherTime"
                app:srcCompat="@drawable/weather_icon" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature" />

            <TextView
                android:id="@+id/temperatureFeelsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/feels_like"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />
            <TextView
                android:id="@+id/temperatureFeels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/temperatureFeelsLabel"
                app:layout_constraintTop_toBottomOf="@+id/description" />
            <TextView
                android:id="@+id/windSpeedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wind_speed"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperatureFeelsLabel" />
            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/windSpeedLabel"
                app:layout_constraintTop_toBottomOf="@+id/temperatureFeelsLabel" />
            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />
            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/humidityLabel"
                app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />
            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/pressure"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />
            <TextView
                android:id="@+id/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/temp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginStart="2dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/pressureLabel"
                app:layout_constraintTop_toBottomOf="@+id/humidityLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>